# yugioh-rush-duel-collection

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md
.claude/: launch.json  settings.json
.claude/skills/ntucgm-blog-structure/: SKILL.md
.claude/skills/rd-banlist-exclusion/: SKILL.md
.claude/skills/rd-card-keywords/: SKILL.md
.claude/skills/rd-changelog-reminder/: SKILL.md
.claude/skills/rd-checklist-api/: SKILL.md
.claude/skills/rd-checklist-data-import/: SKILL.md
.claude/skills/rd-checklist-db-schema/: SKILL.md
.claude/skills/rd-checklist-frontend-arch/: SKILL.md
.claude/skills/rd-checklist-image-serving/: SKILL.md
.claude/skills/rd-docs-sync/: SKILL.md
.claude/skills/rd-html-parsing/: SKILL.md
.claude/skills/rd-image-urls/: SKILL.md
.claude/skills/rd-incremental-update/: SKILL.md
.claude/skills/rd-product-types/: SKILL.md
.claude/skills/rd-project-index/: SKILL.md
.claude/skills/rd-scraping-etiquette/: SKILL.md
apps/rd-checklist/backend/: README.md  pyproject.toml
apps/rd-checklist/backend/rd_checklist/: cli.py  config.py  database.py  main.py  models.py  schemas.py  utils.py
apps/rd-checklist/backend/rd_checklist/routers/: card_sets.py  cards.py  images.py  ownership.py  scan.py  search.py
apps/rd-checklist/backend/rd_checklist/services/: image_service.py  import_service.py
tools/rd-card-scanner/: README.md  pyproject.toml  scan_card.py
tools/rd-card-scraper/: .gitignore  README.md  pyproject.toml
tools/rd-card-scraper/rd_card_scraper/: cli.py  discovery.py  downloader.py  models.py  parser.py  scraper.py
(+40 files in other folders)
