[project]
name = "rd-checklist"
version = "0.1.0"
description = "Yu-Gi-Oh Rush Duel card checklist web application"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy>=2.0",
    "aiofiles>=24.1",
    "python-multipart>=0.0.18",
]
